--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Episodie</string>
     <string name="shared_name_logo">logo</string>
     <string name="shared_name_background">background</string>
+    <string name="image_background_url">
+        http://www.goliath.com/wp-content/uploads/2015/12/1035x776-breakingbad-1800-1404309469.jpg</string>
 </resources>
