--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="shared_name_background">background</string>
     <string name="image_background_url">
         http://www.goliath.com/wp-content/uploads/2015/12/1035x776-breakingbad-1800-1404309469.jpg</string>
+    <!--PATHS / URLS-->
+    <string name="thewalkingdead_background">file:///android_asset/thewalkingdead_background.jpg</string>
+    <string name="breaking_bad_background">file:///android_asset/breaking_bad_background.jpg</string>
 </resources>
