--- a/application/src/main/res/values/strings.xml
+++ b/application/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
 
     <string name="menu_action_most_popular_title">Most popular</string>
     <string name="menu_action_top_list_title">TOP 100</string>
-    <string name="menu_action_watched">Watched</string>
+    <string name="menu_action_premieres">Premieres</string>
 
     <string name="animation_loading">logo_loading_anim.json</string>
     <string name="animation_episodie_text">episodie_anim.json</string>
@@ -13,7 +13,6 @@
     <string name="item_error_content_description">Error icon</string>
     <string name="item_error_retry">Retry</string>
 
-    <string name="all_item_cover_description">Tv show\'s cover</string>
     <string name="item_loading_message">Loading…</string>
 
     <string name="drawer_feed">Feed</string>
@@ -27,5 +26,44 @@
     <string name="watching_time_2d_12h_30m">Watching time: 2d : 12h : 30m</string>
 
     <string name="top_list_app_bar_title">Top 100</string>
-    <string name="item_top_list_ic_diamond_description">Image button add to watched</string>
+
+    <string name="lorem_ipsum">Last Week Tonight with John Oliver, John Oliver presents a satirical look at the week in news, politics and current events</string>
+    <string name="lorem_ipsum2"><p>Based on the bestselling book series <i>A Song of Ice and Fire</i> by George R.R. Martin, this sprawling new HBO drama is set in a world where summers span decades and winters can last a lifetime. From the scheming south and the savage eastern lands, to the frozen north and ancient Wall that protects the realm from the mysterious darkness beyond, the powerful families of the Seven Kingdoms are locked in a battle for the Iron Throne. This is a story of duplicity and treachery, nobility and honor, conquest and triumph. In the <b>Game of Thrones</b>, you either win or you die.</p></string>
+
+    <string name="tv_show_info_imdb_description">IMDb: Movies and TV</string>
+    <string name="tv_show_info_official_website_description">Official website</string>
+    <string name="tv_show_info_tv_maze_description">TvMaze: TV series database</string>
+    <string name="tv_show_info_learn_more_header">Learn more</string>
+    <string name="tv_show_info_ic_official_website_description">Icon of official website</string>
+    <string name="tv_show_info_logo_tv_maze_description">Logo of tv maze</string>
+    <string name="tv_show_info_logo_imdb_description">Logo of imdb</string>
+    <string name="tv_show_info_ic_network_description">Icon of network</string>
+    <string name="tv_show_info_summary_header">Summary</string>
+
+    <string name="tv_show_details_ic_share_description">Icon of share</string>
+    <string name="tv_show_details_ic_arrow_back_description">Back button</string>
+    <string name="tv_show_details_cover_description">Cover of tv show</string>
+    <string name="tv_show_details_status">Status: %1$s</string>
+    <string name="item_all_format_premiered">Premiered: %1$s</string>
+    <string name="tv_show_details_backdrop_description">Background</string>
+
+    <string name="item_season_s_prefix_format">S%1$s</string>
+    <string name="item_season_order_format">Episodes: %1$s</string>
+    <string name="item_season_season_cover_description">Cover of season</string>
+
+    <string name="item_episode_hashtag_prefix_format">#%1$s</string>
+
+    <string name="item_all_ic_diamond_description">Image button add to watched</string>
+    <string name="item_all_cover_description">Tv show\'s cover</string>
+    <string name="item_all_ic_runtime_description">Icon of runtime</string>
+
+    <string name="fragment_seasons_empty_episodes_message">Episodes have not been added yet</string>
+
+    <string name="all_font_path">fonts/coolvetica.ttf</string>
+    <string name="cover_transition">transition_cover</string>
+    <string name="title_transition">titile_transition</string>
+    <string name="zero_prefix_format">0%1$s</string>
+    <string name="item_episode_screen_description">Screen of the episode</string>
+    <string name="item_episode_summary_header">Summary</string>
+
 </resources>
