--- a/application/src/main/res/values/strings.xml
+++ b/application/src/main/res/values/strings.xml
@@ -40,7 +40,7 @@
     <string name="tv_show_info_ic_network_description">Icon of network</string>
     <string name="tv_show_info_summary_header">Summary</string>
 
-    <string name="tv_show_details_ic_share_description">Icon of share</string>
+    <string name="all_ic_share_description">Icon of share</string>
     <string name="tv_show_details_ic_arrow_back_description">Back button</string>
     <string name="tv_show_details_cover_description">Cover of tv show</string>
     <string name="tv_show_details_status">Status: %1$s</string>
@@ -65,5 +65,7 @@
     <string name="zero_prefix_format">0%1$s</string>
     <string name="item_episode_screen_description">Screen of the episode</string>
     <string name="item_episode_summary_header">Summary</string>
+    <string name="all_toast_error_message">Something went wrong</string>
+    <string name="fragment_top_list_backdrop_description">Background of app bar</string>
 
 </resources>
